fixes z-index issues in video story

--- a/normal_story.less
+++ b/normal_story.less
@@ -9,7 +9,7 @@ article {
 }
 
 h1 {
-  margin: 0;
+  margin: 1rem;
 }
 
 p,
