--- a/video_story.less
+++ b/video_story.less
@@ -33,7 +33,7 @@ article {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1;
+  z-index: 20;
   opacity: 1;
   background: linear-gradient(
     to top,
@@ -51,7 +51,7 @@ article {
 // INTRO
 .intro {
   padding: 1em;
-  z-index: 10;
+  z-index: 30;
 }
 
 .intro h1.hed {
